Only show scrollbar if needed, more grammatical fixes to module 1, additional resources, better naming of hyperlinks, opening links in new tab

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -299,7 +299,7 @@ blockquote {
 
 .toc-container{
   height: 70vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .example {
